
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct acpi_device {int dev; } ;


 int AE_BAD_PARAMETER ;
 int put_device (int *) ;
 int return_VALUE (int ) ;

__attribute__((used)) static int
acpi_device_unregister (
 struct acpi_device *device)
{
 if (!device)
  return_VALUE(AE_BAD_PARAMETER);





 return_VALUE(0);
}
